CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
FILE(TO_CMAKE_PATH "$ENV{IMAGINEPP_ROOT}" d)
IF(NOT EXISTS "${d}")
    MESSAGE(FATAL_ERROR "Error: environment variable IMAGINEPP_ROOT=" "${d}")
ENDIF(NOT EXISTS "${d}")
SET(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${d}/CMake")
FIND_PACKAGE(Imagine)
aux_source_directory(. SRC_LIST)
PROJECT(RigidBody)
add_executable(Rigid ${SRC_LIST})
ImagineUseModules(Rigid Graphics)
set(CMAKE_BUILD_TYPE Debug)
